--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express3-handlebars": "^0.5.2",
     "http-proxy-middleware": "^2.0.0",
     "morgan": "^1.10.0",
+    "redux-saga": "^1.1.3",
     "webpack": "^5.39.1"
   }
 }
